--- a/hw2-app/package.json
+++ b/hw2-app/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
@@ -8,5 +9,8 @@
   },
   "scripts": {
     "jest": "jest"
+  },
+  "dependencies": {
+    "node-fetch": "^2.7.0"
   }
 }
